# mubi-downloader3

./: .gitignore  ARCHITECTURE.md  README.md  mergetomkv.py  mubi-downloader.ps1  mubi-downloader.sh  mubi_downloader.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
resources/: mubi.com_cookies.txt
src/mubi_downloader/: __init__.py  __main__.py  auth_manager.py  environment.py  mergetomkv.py  mubi_downloader.py
tests/: conftest.py  test_auth_manager.py  test_mergetomkv.py  test_mubi_downloader.py
